--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+    background: rgb(1,255,0);
+    background: radial-gradient(circle, rgba(1,255,0,1) 0%, rgba(0,0,0,1) 100%);
     margin: 0;
     padding: 0;
     height: 100vh;
