--- a/style.css
+++ b/style.css
@@ -1,63 +1,88 @@
 body {
-    background: rgb(1,255,0);
-    background: radial-gradient(circle, rgba(1,255,0,1) 0%, rgba(0,0,0,1) 100%);
+    background: radial-gradient(circle, rgb(0, 255, 234) 0%, rgb(71, 71, 71) 100%);
     margin: 0;
     padding: 0;
     height: 100vh;
     display: flex;
     justify-items: center;
     align-items: center;
+    font-family: Helvetica, sans-serif;
+}
+
+button{
+    font-size: 25px;
+    background-color: #474747;
+    color: white;
+    border: none;
+}
+
+.buttonsop button{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.buttonsnum button{
+    border-radius: 10px;
 }
 
 .calculator {
     margin: auto;
-    background-color: rgb(54, 54, 54);
-    width: 200px;
-    height: 250px;
+    background-color: #212121;
+    width: 285px;
+    height: 580px;
     padding-top: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:flex-start;
     align-items: center;
-    border-radius: 5px;
-}
-button {
-    flex: 1;
+    border-radius: 30px;
 }
 
-.buttonsnum {
-    max-width: 110px;
-    flex: 1 0 1;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+ .buttonsnum {
+    display: grid;
+    grid-template: repeat(4, 80px) / repeat(3, 50px);
 }
 
 .buttonsop {
-    min-width: 60px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    display: grid;
+    grid-template: repeat(4, 1fr);
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 .buttons {
-    background-color: black;
-    border: 2px solid rgb(173, 173, 173);
-    border-radius: 5px;
-    width: 150px;
-    height: 150px; 
+    flex: 1;
+    margin: 20px;
+/*     background-color: black;
+    border: 2px solid rgb(173, 173, 173); */
+    border-radius: 15px;
     display: flex;
     justify-content: center;
+    overflow: hidden;
+    padding: 10px;
+}
+
+.buttons, .buttonsop, .buttonsnum {
+    gap:10px;
 }
 
 .display {
-    background-color: rgb(0, 51, 3);
-    color: rgb(83, 172, 0);
-    border: 2px solid rgb(173, 173, 173);
-    border-radius: 5px;
-    margin-bottom: 10px;
-    width: 150px;
-    padding-top: 20px;
+    font-size: 55px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(160, 160, 160);
+    color: rgb(255, 255, 255);
+    border-radius: 15px;
+    width: 250px;
+    height: 170px;
     text-align: end;
+}
+
+.displaydown, .displayup {
+    flex: 1;
+    flex-shrink: 0;
+    overflow: hidden;
 }
