--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ button:hover {
     justify-content:flex-start;
     align-items: center;
     border-radius: 30px;
+    box-shadow: 5px 5px 10px -3px rgba(0,0,0,0.75);
 }
 
 .buttons, .buttonsop, .buttonsnum {
